fixed horizontal overflow on desktops

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -4,6 +4,7 @@
 
 body {
     width: 100%;
+    overflow-x: hidden;
     margin: 0 auto;
 }
 
@@ -11,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 100%;
     align-items: center;
     background:#f5f5f5;
 }
